--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -164,3 +163,9 @@ cython_debug/
 
 # venv environment
 pytest_lab_venv
+
+# pytest-html
+report.html
+rapport_*.html
+
+assets/
